api-gateway/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microservices
  annotations:
    argocd.argoproj.io/sync-options: SkipReplicaField 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: haythemloueti/api-gateway:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
