api-gateway/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microservices
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 8080
